--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>blether</title>
+    <link type="text/css" rel="stylesheet" href="build/jodit.min.css" />
+    <script type="text/javascript" src="build/jodit.min.js"></script>
   </head>
 
   <body>
